# AI-JinShu

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  coverage.xml  docker-compose.deploy.yml  docker-compose.yml  justfile  package-lock.json  pyproject.toml
alembic/: env.py
app/: __init__.py  main.py
deploy/: entrypoint.sh  supervisord.conf
docs/: agent-learning-handbook.md  api.md  backend-code-reading-guide.md  database.md  deployment.md  interview-prep-architecture-qa.md  longform-novel-technical-plan.md  prompt-engineering.md  task-scheduling.md
presets/: anti_ai_rules.yaml  audiences.yaml  genres.yaml  inspiration_tags.yaml  languages.yaml  lengths.yaml  styles.yaml
scripts/: evaluate_generation_metrics.py  repair_active_creation_tasks.py  repair_generation_cache.py  repair_novel_outline_gaps.py  rollback_progression_memory.py
tests/: conftest.py  test_account_header_stats_api.py  test_admin_settings_api.py  test_api.py  test_auth_api.py  test_authz.py  test_chapter_loop_context.py  test_chapter_progress_status.py  test_chapter_title_resolution.py  test_character_focus_context.py  test_character_profiles.py  test_consistency_constraints.py  test_context_blocks.py  test_context_feedback.py  test_core_llm.py  test_core_utils.py  test_env_examples.py  test_evaluate_generation_metrics_script.py  test_evaluation_metrics.py  test_final_review_node.py  test_generation_agents_strict.py  test_generation_bridge_outline.py  test_generation_common_services.py  test_generation_controls.py  (+42 more)
(+291 files in other folders)
