[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-jinshu-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.0.6",
    "langchain-google-genai>=0.0.6",
    "langgraph>=0.0.20",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "langdetect>=1.0.9",
    "language-tool-python>=3.2.2",
    "pyjwt>=2.11.0",
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "httpx>=0.26.0", "ruff>=0.1.0"]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
